--- a/app/src/main/res/layout/activity_ficha.xml
+++ b/app/src/main/res/layout/activity_ficha.xml
@@ -6,105 +6,107 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="0dp"
-      android:layout_weight="25"
-      android:orientation="horizontal">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="25"
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="40"
-        tools:srcCompat="@tools:sample/avatars" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="40"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="60"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/editTextNombre"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="50"
+                android:ems="10"
+                android:hint="Nombre"
+                android:inputType="text" />
+
+            <EditText
+                android:id="@+id/editTextApellido"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="50"
+                android:ems="10"
+                android:hint="Apellido"
+                android:inputType="text" />
+        </LinearLayout>
+    </LinearLayout>
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="60"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="50"
         android:orientation="vertical">
 
-      <EditText
-          android:id="@+id/editTextText"
-          android:layout_width="match_parent"
-          android:layout_height="0dp"
-          android:layout_weight="50"
-          android:ems="10"
-          android:hint="Nombre"
-          android:inputType="text" />
+        <EditText
+            android:id="@+id/editTextTextDireccion"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="25"
+            android:ems="10"
+            android:hint="Direccion"
+            android:inputType="textPostalAddress" />
 
-      <EditText
-          android:id="@+id/editTextText2"
-          android:layout_width="match_parent"
-          android:layout_height="0dp"
-          android:layout_weight="50"
-          android:ems="10"
-          android:hint="Apellido"
-          android:inputType="text" />
+        <EditText
+            android:id="@+id/editTextObservaciones"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="25"
+            android:ems="10"
+            android:hint="Obsevaciones"
+            android:inputType="text"
+            android:textAlignment="viewStart" />
     </LinearLayout>
-  </LinearLayout>
 
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="0dp"
-      android:layout_weight="50"
-      android:orientation="vertical">
-
-    <EditText
-        android:id="@+id/editTextTextPostalAddress"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="25"
-        android:ems="10"
-        android:hint="Direccion"
-        android:inputType="textPostalAddress" />
+        android:gravity="center_horizontal|center_vertical"
+        android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/editTextText5"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="25"
-        android:ems="10"
-        android:hint="Obsevaciones"
-        android:inputType="text"
-        android:textAlignment="viewStart" />
-  </LinearLayout>
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="0dp"
-      android:layout_weight="25"
-      android:gravity="center_horizontal|center_vertical"
-      android:orientation="horizontal">
+        <Button
+            android:id="@+id/buttonGuardar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:onClick="botonGuardar"
+            android:text="Guardar" />
 
-    <Space
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:text="Guardar" />
+        <Button
+            android:id="@+id/buttonAtras"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:onClick="botonAtras"
+            android:text="Atrás" />
 
-    <Space
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:text="Cancelar" />
-
-    <Space
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
-  </LinearLayout>
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+    </LinearLayout>
 </LinearLayout>
